chore: organize whole project to distribution

--- a/Ciao.xcodeproj/xcshareddata/xcschemes/Ciao-watchOS.xcscheme
+++ b/Ciao.xcodeproj/xcshareddata/xcschemes/Ciao-watchOS.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "24E93CDC1F8D0E0B009886B6"
+               BlueprintIdentifier = "3549BB2D1DA389DB00C63030"
                BuildableName = "Ciao.framework"
-               BlueprintName = "Ciao"
+               BlueprintName = "Ciao-watchOS"
                ReferencedContainer = "container:Ciao.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,26 +29,7 @@
       language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "24E93CE51F8D0E0B009886B6"
-               BuildableName = "CiaoTests.xctest"
-               BlueprintName = "CiaoTests"
-               ReferencedContainer = "container:Ciao.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "24E93CDC1F8D0E0B009886B6"
-            BuildableName = "Ciao.framework"
-            BlueprintName = "Ciao"
-            ReferencedContainer = "container:Ciao.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -66,9 +47,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "24E93CDC1F8D0E0B009886B6"
+            BlueprintIdentifier = "3549BB2D1DA389DB00C63030"
             BuildableName = "Ciao.framework"
-            BlueprintName = "Ciao"
+            BlueprintName = "Ciao-watchOS"
             ReferencedContainer = "container:Ciao.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -84,9 +65,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "24E93CDC1F8D0E0B009886B6"
+            BlueprintIdentifier = "3549BB2D1DA389DB00C63030"
             BuildableName = "Ciao.framework"
-            BlueprintName = "Ciao"
+            BlueprintName = "Ciao-watchOS"
             ReferencedContainer = "container:Ciao.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
