--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,13 @@ env:
   - TVOS_FRAMEWORK_SCHEME="Ciao-tvOS"
   matrix:
   - DESTINATION="OS=11.1,name=iPhone X"          SCHEME="$IOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"    PLATFORM="iOS"
-  - DESTINATION="OS=10.3.1,name=iPhone 7 Plus    SCHEME="$IOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"    PLATFORM="iOS"
+  - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"   SCHEME="$IOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"    PLATFORM="iOS"
   - DESTINATION="OS=9.0,name=iPhone 6"           SCHEME="$IOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"    PLATFORM="iOS"
   - DESTINATION="OS=8.1,name=iPhone 4s"          SCHEME="$IOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"    PLATFORM="iOS"
   - DESTINATION="arch=x86_64"                    SCHEME="$OSX_FRAMEWORK_SCHEME"    RUN_TESTS="YES"    PLATFORM="macOS"
-  - DESTINATION="OS=11.0,name=Apple TV 1080p"    SCHEME="$TVOS_FRAMEWORK_SCHEME    RUN_TESTS="YES"    PLATFORM="tvOS"
-  - DESTINATION="OS=10.2,name=Apple TV 1080p"    SCHEME="$TVOS_FRAMEWORK_SCHEME    RUN_TESTS="YES"    PLATFORM="tvOS"
-  - DESTINATION="OS=9.0,name=Apple TV 1080p"     SCHEME="$TVOS_FRAMEWORK_SCHEME    RUN_TESTS="YES"    PLATFORM="tvOS"
+  - DESTINATION="OS=11.0,name=Apple TV 1080p"    SCHEME="$TVOS_FRAMEWORK_SCHEME"   RUN_TESTS="YES"    PLATFORM="tvOS"
+  - DESTINATION="OS=10.2,name=Apple TV 1080p"    SCHEME="$TVOS_FRAMEWORK_SCHEME"   RUN_TESTS="YES"    PLATFORM="tvOS"
+  - DESTINATION="OS=9.0,name=Apple TV 1080p"     SCHEME="$TVOS_FRAMEWORK_SCHEME"   RUN_TESTS="YES"    PLATFORM="tvOS"
 before_script:
 - carthage bootstrap --verbose --no-use-binaries --cache-builds --platform $PLATFORM
 script:
