--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ jobs:
   include:
   - script: pod lib lint --verbose --allow-warnings
   - stage: deploy
-    before_deploy: carthage build --no-skip-current && carthage archive Ciao
+    before_deploy: carthage build --no-skip-current --cache-builds && carthage archive Ciao
     deploy:
     - provider: releases
       api_key:
