--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ env:
   - DESTINATION="OS=9.0,name=iPhone 6"           SCHEME="$IOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"    PLATFORM="iOS"
   # - DESTINATION="OS=8.1,name=iPhone 5s"          SCHEME="$IOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"    PLATFORM="iOS"
   - DESTINATION="arch=x86_64"                    SCHEME="$OSX_FRAMEWORK_SCHEME"    RUN_TESTS="YES"    PLATFORM="macOS"
-  - DESTINATION="OS=11.3,name=Apple TV 1080p"    SCHEME="$TVOS_FRAMEWORK_SCHEME"   RUN_TESTS="YES"    PLATFORM="tvOS"
+  - DESTINATION="OS=11.3,name=Apple TV 4K"    SCHEME="$TVOS_FRAMEWORK_SCHEME"   RUN_TESTS="YES"    PLATFORM="tvOS"
   - DESTINATION="OS=10.2,name=Apple TV 1080p"    SCHEME="$TVOS_FRAMEWORK_SCHEME"   RUN_TESTS="YES"    PLATFORM="tvOS"
   - DESTINATION="OS=9.0,name=Apple TV 1080p"     SCHEME="$TVOS_FRAMEWORK_SCHEME"   RUN_TESTS="YES"    PLATFORM="tvOS"
 
